--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ sudo: false
 
 env:
   global:
-    - CODECOV_TOKEN="71ed8b70-0dc0-452a-a134-e82312b75741"
+    - CODECOV_TOKEN='71ed8b70-0dc0-452a-a134-e82312b75741'
 
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонний сервис https://codecov.io/
