--- a/pom.xml
+++ b/pom.xml
@@ -120,10 +120,10 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <finalName>find</finalName>
+                            <finalName>EchoServer</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ru.job4j.search.Find</mainClass>
+                                    <mainClass>ru.job4j.io.EchoServer</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
